main/default/objects/General_Material_Group__c/General_Material_Group__c.object-meta.xml
<CustomObject>
    <label>General Material Group</label>
    <nameField>
        <displayFormat>GMG-{00000}</displayFormat>
        <label>General Material Group Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Material Groups</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>