main/default/objects/General_Material_Group__c/fields/Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Group_Description__c</fullName>
    <description>Description for General Material Group in Rich Text Format</description>
    <label>Group Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>