main/default/objects/General_Material_Group__c/fields/Group_Header__c.field-meta.xml
<CustomField>
    <fullName>Group_Header__c</fullName>
    <label>Group Header</label>
    <length>100</length>
    <type>Text</type>
</CustomField>